--- a/css/styles.css
+++ b/css/styles.css
@@ -327,6 +327,9 @@ p {
 }
 .team-list-item {
 	width: calc((100% - 30px * 3) / 4);
+	background-color: #ffffff;
+	box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
+	border-radius: 0px 0px 4px 4px;
 }
 
 .team-list-item + .team-list-item {
@@ -563,12 +566,18 @@ p {
 	margin-right: 30px;
 	margin-bottom: 30px;
 
+	border: 1px solid #eeeeee;
+
 	width: calc((100% - 30px * 2) / 3);
 	/* width: 370px; */
 }
 
 .portfolio-list-item:nth-child(3n) {
 	margin-right: 0px;
+}
+.portfolio-list-item:hover,
+.portfolio-list-item:focus {
+	box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06), 0px 1px 1px rgba(0, 0, 0, 0.12);
 }
 
 .portfolio-list-item:nth-last-child(-n + 3) {
